Fixed Button Name add and get to Create and Join

--- a/client/vue/index.html
+++ b/client/vue/index.html
@@ -65,11 +65,11 @@
         </div>
         <div class="box">
             <input v-model="game_name">
-            <button class="button" v-on:click="create_game">Add Game</button>
+            <button class="button" v-on:click="create_game">Create Game</button>
         </div>
         <div class="box">
             <input v-model="game_uid">
-            <button class="button" v-on:click="get_game">Get Game</button>
+            <button class="button" v-on:click="get_game">Join Game</button>
         </div>
     </div>
     <div class="container" v-if="website==='PlayerSetup'" id="PlayerSetup">
