removed 'for' attribute in Game ID label

--- a/client/vue/index.html
+++ b/client/vue/index.html
@@ -69,7 +69,7 @@
             <button class="button" v-on:click="create_game">Create Game</button>
         </div>
         <div class="box">
-          <label for="Game_ID">Game ID</label> 
+          <label>Game ID</label> 
              <input v-model="game_uid">
     
             <button class="button" v-on:click="get_game">Join Game</button>
