--- a/client/vue/index.html
+++ b/client/vue/index.html
@@ -99,14 +99,14 @@
         <button class="button" v-on:click="start_game">Start Game</button>
     </div>
     <div class="container-row" v-if="website==='Game'" id="Game">
-        <div>
+        <div class="sidepane-container">
             <div class="log-container">
                 <div class="sidepane-button-left">
                     <button class="sidepane-button" v-on:click="show_log = !show_log">Log</button>
                 </div>
                 <div class="log-text-box" v-if="show_log">
                     <p style="text-align: center;">Game Log</p>
-                    <p v-for="log in this.game_log">{{log}}</p>
+                    <p class="log-text" v-for="log in this.game_log">{{log}}</p>
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
                 <p v-if="my_turn">Your Turn!</p>
             </div>
         </div>
-        <div>
+        <div class="sidepane-container">
             <div class="chat-container">
                 <div class="sidepane-button-right">
                     <button class="sidepane-button" v-on:click="show_chat = !show_chat">Chat</button>
